
2013-01-05  GoldenKevin  (revision 185)

	* Quests will not complete or start if players do not have enough inventory
	space to receive an item.
	* Quest start and completion refactoring - error messages are now given to
	players.
	* !give command gives an error if a nonexistent item is entered.
	* Fixed "existent" typos.

2013-01-06  GoldenKevin  (revision 186)

	* Send level up packet to map when player's level is changed through !stat 
	command.
	* Do not send job change or avatar change packets back to client that had
	their job or avatar changed.
	* `mapmemory` table now stores spawn points. GameCharacter methods and
	script bindings updated accordingly.
	* Added "free market" and "happyville" to list of warpable maps for the
	!town command.
	* Added !jail command.
	* Accumulate infractions if a player tries replenishing HP without a pause
	after flinching (attacking, getting hurt, or casting skills) or moving.

2013-01-12  GoldenKevin  (revision 187)

	* Removed !cpu debug command.
	* Commands on offline characters only work on characters in the same world
	as the caller character.
	* Added "ariant" to list of warpable maps for the !town command.
	* Omok pieces may not be laid on top of each other.
	* Fixed each hit on a mob counting as a whole mob killed for quest purposes.
	* Stubs for high damage auto ban.

2013-01-12  GoldenKevin  (revision 188)

	* Eliminated potential for race conditions when making events where only one
	instance can be running at a time.
	* Fixed portals/q2073.js allowing multiple players to enter the map. 
	* events/pigFarm.js now spawns players in the correct destination portal.
	* Descriptions for portal scripts now list the portal name instead of the
	script name.
	* Eliminated unused portal scripts.
	* NLC subway schedule shortened to six minutes.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.