@@ -67,6 +67,7 @@ public final class Skills {
 		BW_LIGHTNING_CHARGE = 1211008,
 		MAGIC_CRASH = 1211009,
 
+		ADVANCED_CHARGE_BLOW = 1220010,
 		PALADIN_MAPLE_WARRIOR = 1221000,
 		PALADIN_MONSTER_MAGNET = 1221001,
 		PAGE_POWER_STANCE = 1221002,
